<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_centerInParent="true"
	android:orientation="vertical">

	<LinearLayout
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="vertical">

		<TextView
			android:id="@+id/txtNoLostnFound"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:text="@string/no_lost_n_found"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/txtNoLostnFoundDisc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="20dp"
			android:alpha="0.7"
			android:gravity="center"
			android:text="@string/no_lost_n_found_disc"
			android:textSize="16sp"/>

		<com.brainbox.student.ui.button.ButtonPlus
			android:id="@+id/btnRefresh"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/abc_alpha_btn_background"
			android:text="@string/refresh"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textSize="18sp"/>
	</LinearLayout>
</RelativeLayout>